--- a/cpp_BOJ_repo.vcxproj.filters
+++ b/cpp_BOJ_repo.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="9498_B5.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2753_B5.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
