--- a/cpp_BOJ_repo.vcxproj.filters
+++ b/cpp_BOJ_repo.vcxproj.filters
@@ -48,5 +48,8 @@
     <ClCompile Include="10871_B5.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2562_B3.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
