--- a/cpp_BOJ_repo.vcxproj
+++ b/cpp_BOJ_repo.vcxproj
@@ -31,6 +31,7 @@
     <ClCompile Include="10950_B5.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="15596_B2.cpp" />
     <ClCompile Include="2438_B5.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
