--- a/cpp_BOJ_repo.vcxproj.filters
+++ b/cpp_BOJ_repo.vcxproj.filters
@@ -81,5 +81,8 @@
     <ClCompile Include="1978_B1.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="9020_S2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
