--- a/cpp_BOJ_repo.vcxproj.filters
+++ b/cpp_BOJ_repo.vcxproj.filters
@@ -96,5 +96,8 @@
     <ClCompile Include="1914_G5.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="9663_G4.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
