--- a/cpp_BOJ_repo.vcxproj.filters
+++ b/cpp_BOJ_repo.vcxproj.filters
@@ -141,5 +141,8 @@
     <ClCompile Include="2630_S2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="10828_S4.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
