--- a/cpp_BOJ_repo.vcxproj.filters
+++ b/cpp_BOJ_repo.vcxproj.filters
@@ -147,5 +147,8 @@
     <ClCompile Include="10773_S4.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="9012_S4.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
