--- a/cpp_BOJ_repo.vcxproj.filters
+++ b/cpp_BOJ_repo.vcxproj.filters
@@ -150,5 +150,8 @@
     <ClCompile Include="9012_S4.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="17608_B2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
