--- a/cpp_BOJ_repo.vcxproj.filters
+++ b/cpp_BOJ_repo.vcxproj.filters
@@ -156,5 +156,11 @@
     <ClCompile Include="2493_G5.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="18258_S4.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="2164_S4.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
