--- a/cpp_BOJ_repo.vcxproj.filters
+++ b/cpp_BOJ_repo.vcxproj.filters
@@ -162,5 +162,11 @@
     <ClCompile Include="2164_S4.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="11866_S4.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="11279_S2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
