--- a/cpp_BOJ_repo.vcxproj.filters
+++ b/cpp_BOJ_repo.vcxproj.filters
@@ -171,5 +171,8 @@
     <ClCompile Include="1655_G2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1715_G4.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
